--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Nature Wallpaper Tab",
+  "name": "Nature Wallpapers HD Tab",
   "version": "0.1",
   "author": "Ray C",
   "description": "Praise nature every time you open a new tab",
